deparments link done

--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Department #<%= @department.id %> details
+  Department #<%= @the_id%> details
 </h1>
 
 <div>
@@ -9,20 +9,20 @@
 </div>
 
 <div>
-  <a href="/delete_department/<%= @department.id %>">
+  <a href="/delete_department/<%= @the_id %>">
     Delete department
   </a>
 </div>
 
 <hr>
 
-<form action="/modify_department/<%= @department.id %>" method="post">
+<form action="/modify_department/<%= @the_id%>" method="post">
   <div>
     <label for="name_box">
       Name
     </label>
 
-    <input type="text" id="name_box" name="query_name" value="<%= @department.name %>">
+    <input type="text" id="name_box" name="query_name" value="<%= @department_name.name %>">
   </div>
 
   <button>
@@ -37,14 +37,14 @@
     Name
   </dt>
   <dd>
-    <%= @department.name %>
+    <%= @department_name.name %>
   </dd>
 
   <dt>
     Number of courses
   </dt>
   <dd>
-    <%= Course.where({ :department_id => @department.id }).count %>
+    <%= @courses.count %>
   </dd>
 
 </dl>
@@ -52,11 +52,13 @@
 <hr>
 
 <h2>Courses</h2>
-<% courses = Course.where({ :department_id => @department.name }) %>
+
 <ul>
-  <% courses.each do |course| %>
+  <% @courses.each do |course| %>
     <li>
       <a href="/courses/<%= course.id %>"><%= course.title %></a>
     </li>
   <% end %>
 </ul>
+
+-->
